app/styles/app.css
html,
body {
  width: 100vw;
  height: 100vh;
  background-color: #f8f0e3;
  font-family: 'Lato', sans-serif;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #b20000;
  margin: 0.75rem 0.75rem 0;
}

header h1 {
  color: white;
  margin: 0.5rem 0 0.5rem 1rem;
}

header .link-group {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  margin-right: 1rem;
}

header .home {
  text-decoration: none;
}

header .link {
  text-decoration: none;
  font-size: 1.75rem;
  font-weight: bold;
  margin: 0 0.5rem 0;
  color: white;
}

header .link.active {
  text-decoration: underline;
}

.btn {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: 'Lato', sans-serif;
  font-weight: bold;
  border-radius: 0.25rem;
  height: 2rem;
  font-size: 1rem;
  cursor: pointer;
}

.btn.primary {
  background-color: #b20000;
  border-color: #b20000;
  color: white;
}

.btn.primary.search {
  width: 60%;
  margin-bottom: 1rem;
}

.btn.primary.favorite,
.btn.primary.save {
  width: 50%;
  margin-bottom: 1rem;
}

.btn-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 0.5rem;
}

.btn-container-col {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 0.5rem;
}

.container {
  padding: 0.75rem;
  height: inherit;
  /* 100% of the width minus the padding / margin */
  width: calc(100% - 1.5rem);
}

.home-container {
  display: flex;
}

.home-container .form-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex-basis: 500px;
  border: 0.25rem solid black;
  border-radius: 0.25rem;
  box-sizing: border-box;
}

.home-container .form-container form {
  display: flex;
  flex-direction: column;
}

.home-container .results-container {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 0.25rem solid black;
  border-radius: 0.25rem;
  box-sizing: border-box;
  margin-left: 1rem;
}

.icon-btn {
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 1.5em;
  height: 1.5em;
}

.input-term,
.input-radius,
.input-location {
  display: flex;
  margin-bottom: 0.25rem;
  height: 1.5em;
}

.input-term #term,
.input-radius #radius,
.input-location #location {
  flex-grow: 1;
}

.radius-unit {
  margin-left: 0.5rem;
}

.price-points {
  display: flex;
  flex-direction: column;
}

.price-point {
  font-size: 0.9rem;
}

.price-point label,
.price-point-checkbox,
.input-open_now label {
  cursor: pointer;
}

.input-open_now {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#open_now,
input.price-point {
  cursor: pointer;
}

.business {
  display: flex;
  width: 100%;
  height: 100%;
}

.business h1,
.business h4,
.business h5 {
  margin: 0;
}

.business-details {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.business-address {
  display: flex;
  margin: 0.5rem 0 0;
}

.business-address i,
.business-phone i,
.business-website i {
  margin-right: 0.5rem;
}

.business-website {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.business-website a {
  color: unset;
  text-decoration: none;
}

.business-website a:hover {
  color: #b20000;
}

.business-phone {
  display: flex;
  align-items: center;
}

.business-categories {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  font-size: 0.75rem;
  font-weight: bold;
  height: 1.5rem;
}

.business-categories .bi-dot {
  font-weight: bold;
  font-size: 1.125rem;
}

.business-label {
  margin-top: 0.125rem;
  margin-right: 0.25rem;
}

.business-category {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 1.75px;
  border-width: 1px;
  border-color: rgb(133, 133, 133);
  border-style: solid;
  background-color: white;
  padding: 0 0.5rem 0;
  margin-top: 0.125rem;
}

.business-image {
  display: flex;
  justify-content: center;
  align-items: center;
}

.business-image img {
  height: 250px;
  width: 250px;
  border-radius: 1.5rem;
  padding: 0 1rem 0;
}

.business-reviews {
  display: flex;
  align-items: center;
}

.business-reviews .bi-star {
  margin-right: 0.25rem;
}

.business-open {
  display: flex;
  font-size: 1.125rem;
  font-weight: bold;
}

.business-open .closed {
  color: red;
}

.business-open .open {
  color: green;
}

.saved-list-container,
.favorites-list-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.saved-list-container h2,
.favorites-list-container h2 {
  margin: 0;
}

.business-item-container {
  border: 0.25rem solid black;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 55%;
  /* height: 40; */
  margin-bottom: 1rem;
}

